--- a/public/index.html
+++ b/public/index.html
@@ -5,127 +5,370 @@
   <title>Troop Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f5f5f5;
+    :root {
+      --red: #b22222;
+      --blue: #1f4e79;
+      --tan: #f4eee3;
+      --white: #ffffff;
+      --text-main: #1f2933;
+      --text-muted: #6b7280;
+      --radius-lg: 16px;
+      --radius-sm: 999px;
+      --shadow-soft: 0 10px 25px rgba(0, 0, 0, 0.06);
     }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
+      margin: 0;
+      background: radial-gradient(circle at top, #ffffff 0, var(--tan) 55%);
+      color: var(--text-main);
+    }
+
     header {
-      background: #124734; /* BSA-ish green */
-      color: white;
-      padding: 10px 20px;
+      background: linear-gradient(120deg, var(--blue), var(--red));
+      color: var(--white);
+      padding: 14px 24px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
+
     header h1 {
       margin: 0;
       font-size: 20px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
+
+    header h1::before {
+      content: "★";
+      font-size: 18px;
+    }
+
+    nav {
+      display: flex;
+      gap: 12px;
+      font-size: 13px;
+      text-transform: uppercase;
+    }
+
     nav a {
-      color: white;
-      margin-left: 10px;
+      color: var(--white);
       text-decoration: none;
-      font-size: 14px;
+      padding: 6px 10px;
+      border-radius: var(--radius-sm);
+      border: 1px solid rgba(255, 255, 255, 0.25);
+      backdrop-filter: blur(4px);
+      opacity: 0.9;
     }
+
     nav a:hover {
-      text-decoration: underline;
+      opacity: 1;
+      background: rgba(255, 255, 255, 0.12);
     }
+
     #auth-section {
-      background: #eee;
-      padding: 10px 20px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 14px 24px;
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       align-items: center;
-      font-size: 14px;
+      border-bottom: 1px solid rgba(148, 163, 184, 0.4);
+      backdrop-filter: blur(8px);
     }
+
+    #auth-info {
+      font-size: 14px;
+      color: var(--text-main);
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    #auth-forms {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-left: auto;
+    }
+
     #auth-section input {
-      padding: 4px 6px;
+      padding: 6px 10px;
       font-size: 14px;
+      border-radius: var(--radius-sm);
+      border: 1px solid #d1d5db;
+      background: #f9fafb;
+      min-width: 170px;
     }
+
+    #auth-section input:focus {
+      outline: none;
+      border-color: var(--blue);
+      box-shadow: 0 0 0 2px rgba(31, 78, 121, 0.15);
+    }
+
     #auth-section button {
-      padding: 4px 10px;
+      padding: 6px 14px;
       font-size: 14px;
+      border-radius: var(--radius-sm);
+      border: none;
       cursor: pointer;
+      font-weight: 500;
+      white-space: nowrap;
     }
+
+    #login-btn {
+      background: var(--blue);
+      color: var(--white);
+    }
+
+    #signup-btn {
+      background: var(--red);
+      color: var(--white);
+    }
+
+    #logout-btn {
+      background: transparent;
+      color: var(--blue);
+      border: 1px solid rgba(31, 78, 121, 0.5);
+      margin-left: auto;
+    }
+
+    #logout-btn:hover {
+      background: rgba(31, 78, 121, 0.05);
+    }
+
     main {
-      padding: 20px;
-      max-width: 900px;
+      padding: 24px 16px 40px;
+      max-width: 960px;
       margin: 0 auto;
+      display: none; /* SHOWN ONLY WHEN LOGGED IN */
     }
+
+    .welcome-card {
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: var(--radius-lg);
+      padding: 18px 18px 6px;
+      margin-bottom: 18px;
+      box-shadow: var(--shadow-soft);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 16px;
+      border: 1px solid rgba(148, 163, 184, 0.4);
+    }
+
+    .welcome-card h2 {
+      margin: 0 0 4px;
+      font-size: 18px;
+    }
+
+    .welcome-card p {
+      margin: 0;
+      font-size: 14px;
+      color: var(--text-muted);
+    }
+
+    .badge {
+      font-size: 11px;
+      padding: 4px 8px;
+      border-radius: var(--radius-sm);
+      background: rgba(148, 163, 184, 0.2);
+      color: var(--text-muted);
+      text-transform: uppercase;
+      letter-spacing: 0.07em;
+    }
+
+    .badge.admin {
+      background: rgba(240, 180, 41, 0.16);
+      color: #92400e;
+      border: 1px solid rgba(245, 158, 11, 0.6);
+    }
+
     section {
-      background: white;
-      border-radius: 4px;
-      padding: 15px;
-      margin-bottom: 20px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: var(--radius-lg);
+      padding: 18px 18px 10px;
+      margin-bottom: 18px;
+      box-shadow: var(--shadow-soft);
+      border: 1px solid rgba(148, 163, 184, 0.4);
     }
+
     section h2 {
       margin-top: 0;
+      font-size: 18px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
+
+    section h2::before {
+      content: "▸";
+      font-size: 14px;
+      color: var(--blue);
+    }
+
     form {
-      margin-bottom: 15px;
-      padding: 10px;
-      background: #fafafa;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      margin-bottom: 14px;
+      padding: 10px 10px 6px;
+      background: #f9fafb;
+      border-radius: 12px;
+      border: 1px dashed rgba(148, 163, 184, 0.8);
     }
-    form .field {
+
+    form h3 {
+      margin: 0 0 8px;
+      font-size: 15px;
+      font-weight: 600;
+      color: var(--blue);
+    }
+
+    .field {
       margin-bottom: 8px;
     }
-    form label {
+
+    .field label {
       display: block;
-      font-size: 13px;
+      font-size: 12px;
+      font-weight: 500;
       margin-bottom: 3px;
+      color: var(--text-muted);
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
     }
-    form input[type="text"],
-    form input[type="date"],
-    form input[type="url"],
-    form textarea {
+
+    .field input[type="text"],
+    .field input[type="date"],
+    .field input[type="url"],
+    .field textarea {
       width: 100%;
-      padding: 5px;
+      padding: 6px 8px;
       font-size: 14px;
-      box-sizing: border-box;
+      border-radius: 10px;
+      border: 1px solid #d1d5db;
+      background: #ffffff;
     }
-    form textarea {
+
+    .field textarea {
       resize: vertical;
       min-height: 60px;
     }
-    form button {
-      padding: 5px 10px;
-      font-size: 14px;
-      cursor: pointer;
+
+    .field input:focus,
+    .field textarea:focus {
+      outline: none;
+      border-color: var(--blue);
+      box-shadow: 0 0 0 2px rgba(31, 78, 121, 0.1);
     }
+
+    form button {
+      padding: 6px 14px;
+      font-size: 13px;
+      border-radius: var(--radius-sm);
+      border: none;
+      cursor: pointer;
+      font-weight: 500;
+      background: var(--blue);
+      color: var(--white);
+      margin-top: 4px;
+    }
+
+    form button:hover {
+      opacity: 0.96;
+    }
+
     .item-list {
       list-style: none;
       padding-left: 0;
+      margin: 0;
+      font-size: 14px;
     }
+
     .item-list li {
       padding: 8px 0;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid rgba(229, 231, 235, 0.9);
     }
+
+    .item-list li:last-child {
+      border-bottom: none;
+    }
+
+    .item-list strong {
+      font-weight: 600;
+    }
+
     .meta {
       font-size: 12px;
-      color: #555;
+      color: var(--text-muted);
+      margin-top: 2px;
+      margin-bottom: 2px;
     }
-    .admin-only {
-      display: none; /* shown via JS if user is admin */
-    }
-    .badge {
-      font-size: 12px;
-      padding: 2px 6px;
-      border-radius: 3px;
-      background: #ccc;
-      margin-left: 5px;
-    }
-    .badge.admin {
-      background: #f0b429;
-    }
+
     .small-btn {
       font-size: 11px;
-      padding: 2px 6px;
-      margin-left: 5px;
+      padding: 2px 8px;
+      margin-top: 4px;
+      margin-left: 0;
+      border-radius: var(--radius-sm);
+      border: none;
+      cursor: pointer;
+      background: var(--red);
+      color: var(--white);
+    }
+
+    .small-btn:hover {
+      opacity: 0.95;
+    }
+
+    .admin-only {
+      display: none; /* default hidden until we know user is admin */
+    }
+
+    a {
+      color: var(--blue);
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 640px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+      }
+      nav {
+        width: 100%;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+      }
+      #auth-section {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      #auth-forms {
+        margin-left: 0;
+      }
+      #logout-btn {
+        margin-left: 0;
+      }
+      .welcome-card {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
@@ -134,7 +377,7 @@
     <h1>Troop Website</h1>
     <nav>
       <a href="#calendar">Calendar</a>
-      <a href="#scoutmaster-blog">Scoutmaster Blog</a>
+      <a href="#scoutmaster-blog">Scoutmaster</a>
       <a href="#spl-blog">SPL Blog</a>
       <a href="#documents">Documents</a>
     </nav>
@@ -154,6 +397,19 @@
   </div>
 
   <main>
+    <div class="welcome-card">
+      <div>
+        <h2>Welcome to the Troop Portal</h2>
+        <p>
+          View the troop calendar, read updates from the Scoutmaster and SPL,
+          and access important documents.
+        </p>
+      </div>
+      <div id="role-badge-container">
+        <span class="badge">Viewer</span>
+      </div>
+    </div>
+
     <!-- Calendar -->
     <section id="calendar">
       <h2>Troop Calendar</h2>
@@ -230,7 +486,7 @@
           <input type="text" id="doc-title" required />
         </div>
         <div class="field">
-          <label for="doc-url">Document URL (Google Drive / PDF / etc.)</label>
+          <label for="doc-url">Document URL</label>
           <input type="url" id="doc-url" required />
         </div>
         <div class="field">
@@ -246,7 +502,6 @@
 
   <!-- Firebase (modular CDN) -->
   <script type="module">
-    // 1) Import Firebase SDKs (version number may change; 10.x+ works similarly)
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import {
       getAuth,
@@ -268,7 +523,7 @@
       deleteDoc
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-    // 2) Your Firebase config (replace this!)
+    // 🔧 REPLACE WITH YOUR CONFIG
     const firebaseConfig = {
       apiKey: "YOUR_API_KEY",
       authDomain: "YOUR_AUTH_DOMAIN",
@@ -278,12 +533,11 @@
       appId: "YOUR_APP_ID"
     };
 
-    // 3) Init Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // ======== DOM Elements ========
+    // DOM elements
     const authInfoEl = document.getElementById("auth-info");
     const emailInput = document.getElementById("email-input");
     const passwordInput = document.getElementById("password-input");
@@ -293,6 +547,8 @@
     const authFormsContainer = document.getElementById("auth-forms");
 
     const adminOnlyEls = document.getElementsByClassName("admin-only");
+    const mainEl = document.querySelector("main");
+    const roleBadgeContainer = document.getElementById("role-badge-container");
 
     // Calendar
     const calendarForm = document.getElementById("calendar-form");
@@ -323,27 +579,32 @@
     let currentUser = null;
     let currentIsAdmin = false;
 
-    // Helper to show/hide admin-only sections
     function updateAdminUI() {
+      // Show/hide admin-only forms
       for (let i = 0; i < adminOnlyEls.length; i++) {
         adminOnlyEls[i].style.display = currentIsAdmin ? "block" : "none";
       }
+
+      // Show/hide main content based on login
       if (currentUser) {
-        authInfoEl.innerHTML = `
-          Signed in as ${currentUser.email}
+        mainEl.style.display = "block";
+        authFormsContainer.style.display = "flex";
+        logoutBtn.style.display = "inline-block";
+
+        authInfoEl.innerHTML = `Signed in as ${currentUser.email}`;
+        roleBadgeContainer.innerHTML = `
           <span class="badge ${currentIsAdmin ? "admin" : ""}">
             ${currentIsAdmin ? "Admin" : "Viewer"}
           </span>`;
-        authFormsContainer.style.display = "none";
-        logoutBtn.style.display = "inline-block";
       } else {
+        mainEl.style.display = "none";
         authInfoEl.textContent = "Not signed in";
         authFormsContainer.style.display = "flex";
         logoutBtn.style.display = "none";
+        roleBadgeContainer.innerHTML = `<span class="badge">Viewer</span>`;
       }
     }
 
-    // Check if user is admin by looking for /admins/{uid}
     async function checkAdmin(user) {
       if (!user) return false;
       try {
@@ -356,14 +617,13 @@
       }
     }
 
-    // Auth state listener
     onAuthStateChanged(auth, async (user) => {
       currentUser = user;
       currentIsAdmin = await checkAdmin(user);
       updateAdminUI();
     });
 
-    // Login
+    // Auth events
     loginBtn.addEventListener("click", async () => {
       const email = emailInput.value.trim();
       const pass = passwordInput.value.trim();
@@ -378,7 +638,6 @@
       }
     });
 
-    // Signup
     signupBtn.addEventListener("click", async () => {
       const email = emailInput.value.trim();
       const pass = passwordInput.value.trim();
@@ -394,13 +653,11 @@
       }
     });
 
-    // Logout
     logoutBtn.addEventListener("click", async () => {
       await signOut(auth);
     });
 
-    // ======== Calendar Logic ========
-
+    // ======== Calendar ========
     calendarForm.addEventListener("submit", async (e) => {
       e.preventDefault();
       if (!currentIsAdmin) return alert("Only admins can add events.");
@@ -458,8 +715,7 @@
       renderCalendar(snapshot.docs);
     });
 
-    // ======== Scoutmaster Blog Logic ========
-
+    // ======== Scoutmaster Blog ========
     smForm.addEventListener("submit", async (e) => {
       e.preventDefault();
       if (!currentIsAdmin) return alert("Only admins can post.");
@@ -516,8 +772,7 @@
       renderSMPosts(snapshot.docs);
     });
 
-    // ======== SPL Blog Logic ========
-
+    // ======== SPL Blog ========
     splForm.addEventListener("submit", async (e) => {
       e.preventDefault();
       if (!currentIsAdmin) return alert("Only admins can post.");
@@ -545,7 +800,7 @@
         const created = data.createdAt?.toDate
           ? data.createdAt.toDate().toLocaleString()
           : "";
-        li = document.createElement("li");
+        const li = document.createElement("li");
         li.innerHTML = `
           <strong>${data.title || "Untitled"}</strong>
           <div class="meta">${created}</div>
@@ -574,8 +829,7 @@
       renderSPLPosts(snapshot.docs);
     });
 
-    // ======== Documents Logic ========
-
+    // ======== Documents ========
     docsForm.addEventListener("submit", async (e) => {
       e.preventDefault();
       if (!currentIsAdmin) return alert("Only admins can add documents.");
