--- a/public/index.html
+++ b/public/index.html
@@ -605,18 +605,17 @@
       }
     }
 
-    async function checkAdmin(user) {
-      if (!user) return false;
-      try {
-        const adminRef = doc(db, "admins", user.uid);
-        const snap = await getDoc(adminRef);
-        return snap.exists();
-      } catch (e) {
-        console.error("Error checking admin:", e);
-        return false;
-      }
-    }
+    // 🔴 Same UIDs as in your Firestore rules:
+const ADMIN_UIDS = [
+  "UID_OF_SCOUTMASTER",
+  "UID_OF_SPL",
+  // add more as needed
+];
 
+async function checkAdmin(user) {
+  if (!user) return false;
+  return ADMIN_UIDS.includes(user.uid);
+}
     onAuthStateChanged(auth, async (user) => {
       currentUser = user;
       currentIsAdmin = await checkAdmin(user);
