--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,125 @@
       margin: 0;
       background: radial-gradient(circle at top, #ffffff 0, var(--tan) 55%);
       color: var(--text-main);
+      min-height: 100vh;
+    }
+
+    /* ========= FULLSCREEN LOGIN OVERLAY ========= */
+    #auth-overlay {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: radial-gradient(circle at top, #ffffff 0, var(--tan) 70%);
+      z-index: 50;
+    }
+
+    .auth-card {
+      background: rgba(255, 255, 255, 0.96);
+      border-radius: 20px;
+      padding: 24px 22px 18px;
+      width: 100%;
+      max-width: 360px;
+      box-shadow: var(--shadow-soft);
+      border: 1px solid rgba(148, 163, 184, 0.5);
+    }
+
+    .auth-card-header {
+      text-align: center;
+      margin-bottom: 16px;
+    }
+
+    .auth-card-header h1 {
+      margin: 0;
+      font-size: 20px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: var(--blue);
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .auth-card-header h1::before {
+      content: "★";
+      font-size: 18px;
+      color: var(--red);
+    }
+
+    .auth-card-header p {
+      margin: 6px 0 0;
+      font-size: 13px;
+      color: var(--text-muted);
+    }
+
+    .auth-fields {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .auth-fields label {
+      font-size: 12px;
+      font-weight: 500;
+      color: var(--text-muted);
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      margin-bottom: 3px;
+    }
+
+    .auth-fields input {
+      width: 100%;
+      padding: 7px 10px;
+      font-size: 14px;
+      border-radius: var(--radius-sm);
+      border: 1px solid #d1d5db;
+      background: #f9fafb;
+    }
+
+    .auth-fields input:focus {
+      outline: none;
+      border-color: var(--blue);
+      box-shadow: 0 0 0 2px rgba(31, 78, 121, 0.18);
+    }
+
+    .auth-buttons {
+      display: flex;
+      gap: 8px;
+      margin-top: 12px;
+    }
+
+    .auth-buttons button {
+      flex: 1;
+      padding: 7px 0;
+      font-size: 14px;
+      border-radius: var(--radius-sm);
+      border: none;
+      cursor: pointer;
+      font-weight: 500;
+      color: var(--white);
+    }
+
+    #login-btn {
+      background: var(--blue);
+    }
+
+    #signup-btn {
+      background: var(--red);
+    }
+
+    .auth-note {
+      margin-top: 10px;
+      font-size: 12px;
+      color: var(--text-muted);
+      text-align: center;
+    }
+
+    /* ========= APP SHELL (ONLY WHEN LOGGED IN) ========= */
+    #app-shell {
+      display: none; /* shown only when logged in via JS */
+      min-height: 100vh;
     }
 
     header {
@@ -41,9 +160,9 @@
       z-index: 10;
     }
 
-    header h1 {
+    header h2 {
       margin: 0;
-      font-size: 20px;
+      font-size: 19px;
       letter-spacing: 0.08em;
       text-transform: uppercase;
       display: flex;
@@ -51,7 +170,7 @@
       gap: 8px;
     }
 
-    header h1::before {
+    header h2::before {
       content: "★";
       font-size: 18px;
     }
@@ -78,83 +197,37 @@
       background: rgba(255, 255, 255, 0.12);
     }
 
-    #auth-section {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 14px 24px;
+    #auth-bar {
       display: flex;
-      flex-wrap: wrap;
       gap: 10px;
       align-items: center;
-      border-bottom: 1px solid rgba(148, 163, 184, 0.4);
-      backdrop-filter: blur(8px);
+      font-size: 13px;
     }
 
     #auth-info {
-      font-size: 14px;
-      color: var(--text-main);
       display: flex;
       align-items: center;
-      gap: 8px;
-    }
-
-    #auth-forms {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-left: auto;
-    }
-
-    #auth-section input {
-      padding: 6px 10px;
-      font-size: 14px;
-      border-radius: var(--radius-sm);
-      border: 1px solid #d1d5db;
-      background: #f9fafb;
-      min-width: 170px;
-    }
-
-    #auth-section input:focus {
-      outline: none;
-      border-color: var(--blue);
-      box-shadow: 0 0 0 2px rgba(31, 78, 121, 0.15);
-    }
-
-    #auth-section button {
-      padding: 6px 14px;
-      font-size: 14px;
-      border-radius: var(--radius-sm);
-      border: none;
-      cursor: pointer;
-      font-weight: 500;
-      white-space: nowrap;
-    }
-
-    #login-btn {
-      background: var(--blue);
-      color: var(--white);
-    }
-
-    #signup-btn {
-      background: var(--red);
-      color: var(--white);
+      gap: 6px;
     }
 
     #logout-btn {
-      background: transparent;
-      color: var(--blue);
-      border: 1px solid rgba(31, 78, 121, 0.5);
-      margin-left: auto;
+      padding: 5px 12px;
+      font-size: 13px;
+      border-radius: var(--radius-sm);
+      border: 1px solid rgba(255, 255, 255, 0.7);
+      background: rgba(255, 255, 255, 0.1);
+      color: var(--white);
+      cursor: pointer;
     }
 
     #logout-btn:hover {
-      background: rgba(31, 78, 121, 0.05);
+      background: rgba(255, 255, 255, 0.2);
     }
 
     main {
       padding: 24px 16px 40px;
       max-width: 960px;
       margin: 0 auto;
-      display: none; /* SHOWN ONLY WHEN LOGGED IN */
     }
 
     .welcome-card {
@@ -170,7 +243,7 @@
       border: 1px solid rgba(148, 163, 184, 0.4);
     }
 
-    .welcome-card h2 {
+    .welcome-card h3 {
       margin: 0 0 4px;
       font-size: 18px;
     }
@@ -333,7 +406,7 @@
     }
 
     .admin-only {
-      display: none; /* default hidden until we know user is admin */
+      display: none; /* shown via JS for admins */
     }
 
     a {
@@ -355,150 +428,168 @@
         justify-content: flex-start;
         flex-wrap: wrap;
       }
-      #auth-section {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      #auth-forms {
-        margin-left: 0;
-      }
-      #logout-btn {
-        margin-left: 0;
-      }
       .welcome-card {
         flex-direction: column;
         align-items: flex-start;
+      }
+      .auth-card {
+        margin: 0 16px;
       }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Troop Website</h1>
-    <nav>
-      <a href="#calendar">Calendar</a>
-      <a href="#scoutmaster-blog">Scoutmaster</a>
-      <a href="#spl-blog">SPL Blog</a>
-      <a href="#documents">Documents</a>
-    </nav>
-  </header>
-
-  <div id="auth-section">
-    <div id="auth-info">
-      Not signed in
+  <!-- FULLSCREEN LOGIN -->
+  <div id="auth-overlay">
+    <div class="auth-card">
+      <div class="auth-card-header">
+        <h1>Troop Portal</h1>
+        <p>Sign in to view troop calendar, blogs, and documents.</p>
+      </div>
+      <div class="auth-fields">
+        <div>
+          <label for="email-input">Email</label>
+          <input type="email" id="email-input" placeholder="you@example.com" />
+        </div>
+        <div>
+          <label for="password-input">Password</label>
+          <input type="password" id="password-input" placeholder="Password" />
+        </div>
+      </div>
+      <div class="auth-buttons">
+        <button id="login-btn">Log In</button>
+        <button id="signup-btn">Sign Up</button>
+      </div>
+      <div class="auth-note">
+        New accounts are created as viewers. An adult leader can mark your
+        account as admin if needed.
+      </div>
     </div>
-    <div id="auth-forms">
-      <input type="email" id="email-input" placeholder="Email" />
-      <input type="password" id="password-input" placeholder="Password" />
-      <button id="login-btn">Log In</button>
-      <button id="signup-btn">Sign Up</button>
-    </div>
-    <button id="logout-btn" style="display:none;">Log Out</button>
   </div>
 
-  <main>
-    <div class="welcome-card">
+  <!-- APP SHELL (HIDDEN UNTIL LOGGED IN) -->
+  <div id="app-shell">
+    <header>
       <div>
-        <h2>Welcome to the Troop Portal</h2>
-        <p>
-          View the troop calendar, read updates from the Scoutmaster and SPL,
-          and access important documents.
-        </p>
+        <h2>Troop Website</h2>
       </div>
-      <div id="role-badge-container">
-        <span class="badge">Viewer</span>
+
+      <nav>
+        <a href="#calendar">Calendar</a>
+        <a href="#scoutmaster-blog">Scoutmaster</a>
+        <a href="#spl-blog">SPL Blog</a>
+        <a href="#documents">Documents</a>
+      </nav>
+
+      <div id="auth-bar">
+        <div id="auth-info">Signed in as …</div>
+        <button id="logout-btn">Log Out</button>
       </div>
-    </div>
+    </header>
 
-    <!-- Calendar -->
-    <section id="calendar">
-      <h2>Troop Calendar</h2>
-
-      <!-- Admin-only calendar form -->
-      <form id="calendar-form" class="admin-only">
-        <h3>Add Calendar Event</h3>
-        <div class="field">
-          <label for="event-title">Title</label>
-          <input type="text" id="event-title" required />
+    <main>
+      <div class="welcome-card">
+        <div>
+          <h3>Welcome to the Troop Portal</h3>
+          <p>
+            View the troop calendar, read updates from the Scoutmaster and SPL,
+            and access important documents.
+          </p>
         </div>
-        <div class="field">
-          <label for="event-date">Date</label>
-          <input type="date" id="event-date" required />
+        <div id="role-badge-container">
+          <span class="badge">Viewer</span>
         </div>
-        <div class="field">
-          <label for="event-description">Description</label>
-          <textarea id="event-description"></textarea>
-        </div>
-        <button type="submit">Add Event</button>
-      </form>
+      </div>
 
-      <ul id="calendar-list" class="item-list"></ul>
-    </section>
+      <!-- Calendar -->
+      <section id="calendar">
+        <h2>Troop Calendar</h2>
 
-    <!-- Scoutmaster Blog -->
-    <section id="scoutmaster-blog">
-      <h2>Scoutmaster Blog</h2>
+        <form id="calendar-form" class="admin-only">
+          <h3>Add Calendar Event</h3>
+          <div class="field">
+            <label for="event-title">Title</label>
+            <input type="text" id="event-title" required />
+          </div>
+          <div class="field">
+            <label for="event-date">Date</label>
+            <input type="date" id="event-date" required />
+          </div>
+          <div class="field">
+            <label for="event-description">Description</label>
+            <textarea id="event-description"></textarea>
+          </div>
+          <button type="submit">Add Event</button>
+        </form>
 
-      <form id="scoutmaster-form" class="admin-only">
-        <h3>New Scoutmaster Post</h3>
-        <div class="field">
-          <label for="sm-title">Title</label>
-          <input type="text" id="sm-title" required />
-        </div>
-        <div class="field">
-          <label for="sm-body">Content</label>
-          <textarea id="sm-body" required></textarea>
-        </div>
-        <button type="submit">Publish Post</button>
-      </form>
+        <ul id="calendar-list" class="item-list"></ul>
+      </section>
 
-      <ul id="scoutmaster-list" class="item-list"></ul>
-    </section>
+      <!-- Scoutmaster Blog -->
+      <section id="scoutmaster-blog">
+        <h2>Scoutmaster Blog</h2>
 
-    <!-- SPL Blog -->
-    <section id="spl-blog">
-      <h2>SPL Blog</h2>
+        <form id="scoutmaster-form" class="admin-only">
+          <h3>New Scoutmaster Post</h3>
+          <div class="field">
+            <label for="sm-title">Title</label>
+            <input type="text" id="sm-title" required />
+          </div>
+          <div class="field">
+            <label for="sm-body">Content</label>
+            <textarea id="sm-body" required></textarea>
+          </div>
+          <button type="submit">Publish Post</button>
+        </form>
 
-      <form id="spl-form" class="admin-only">
-        <h3>New SPL Post</h3>
-        <div class="field">
-          <label for="spl-title">Title</label>
-          <input type="text" id="spl-title" required />
-        </div>
-        <div class="field">
-          <label for="spl-body">Content</label>
-          <textarea id="spl-body" required></textarea>
-        </div>
-        <button type="submit">Publish Post</button>
-      </form>
+        <ul id="scoutmaster-list" class="item-list"></ul>
+      </section>
 
-      <ul id="spl-list" class="item-list"></ul>
-    </section>
+      <!-- SPL Blog -->
+      <section id="spl-blog">
+        <h2>SPL Blog</h2>
 
-    <!-- Documents -->
-    <section id="documents">
-      <h2>Troop Documents</h2>
+        <form id="spl-form" class="admin-only">
+          <h3>New SPL Post</h3>
+          <div class="field">
+            <label for="spl-title">Title</label>
+            <input type="text" id="spl-title" required />
+          </div>
+          <div class="field">
+            <label for="spl-body">Content</label>
+            <textarea id="spl-body" required></textarea>
+          </div>
+          <button type="submit">Publish Post</button>
+        </form>
 
-      <form id="documents-form" class="admin-only">
-        <h3>Add Document Link</h3>
-        <div class="field">
-          <label for="doc-title">Document Title</label>
-          <input type="text" id="doc-title" required />
-        </div>
-        <div class="field">
-          <label for="doc-url">Document URL</label>
-          <input type="url" id="doc-url" required />
-        </div>
-        <div class="field">
-          <label for="doc-description">Description (optional)</label>
-          <textarea id="doc-description"></textarea>
-        </div>
-        <button type="submit">Add Document</button>
-      </form>
+        <ul id="spl-list" class="item-list"></ul>
+      </section>
 
-      <ul id="documents-list" class="item-list"></ul>
-    </section>
-  </main>
+      <!-- Documents -->
+      <section id="documents">
+        <h2>Troop Documents</h2>
+
+        <form id="documents-form" class="admin-only">
+          <h3>Add Document Link</h3>
+          <div class="field">
+            <label for="doc-title">Document Title</label>
+            <input type="text" id="doc-title" required />
+          </div>
+          <div class="field">
+            <label for="doc-url">Document URL</label>
+            <input type="url" id="doc-url" required />
+          </div>
+          <div class="field">
+            <label for="doc-description">Description (optional)</label>
+            <textarea id="doc-description"></textarea>
+          </div>
+          <button type="submit">Add Document</button>
+        </form>
+
+        <ul id="documents-list" class="item-list"></ul>
+      </section>
+    </main>
+  </div>
 
   <!-- Firebase (modular CDN) -->
   <script type="module">
@@ -519,7 +610,6 @@
       orderBy,
       serverTimestamp,
       doc,
-      getDoc,
       deleteDoc
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
@@ -537,18 +627,19 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // DOM elements
-    const authInfoEl = document.getElementById("auth-info");
+    // ===== DOM ELEMENTS =====
+    const authOverlay = document.getElementById("auth-overlay");
+    const appShell = document.getElementById("app-shell");
+
     const emailInput = document.getElementById("email-input");
     const passwordInput = document.getElementById("password-input");
     const loginBtn = document.getElementById("login-btn");
     const signupBtn = document.getElementById("signup-btn");
-    const logoutBtn = document.getElementById("logout-btn");
-    const authFormsContainer = document.getElementById("auth-forms");
 
-    const adminOnlyEls = document.getElementsByClassName("admin-only");
-    const mainEl = document.querySelector("main");
+    const authInfoEl = document.getElementById("auth-info");
+    const logoutBtn = document.getElementById("logout-btn");
     const roleBadgeContainer = document.getElementById("role-badge-container");
+    const adminOnlyEls = document.getElementsByClassName("admin-only");
 
     // Calendar
     const calendarForm = document.getElementById("calendar-form");
@@ -579,50 +670,53 @@
     let currentUser = null;
     let currentIsAdmin = false;
 
+    // 🛡️ Hard-coded admin UIDs (match your Firestore rules)
+    const ADMIN_UIDS = [
+      "UID_OF_SCOUTMASTER",
+      "UID_OF_SPL"
+      // Add more UIDs here as needed
+    ];
+
+    async function checkAdmin(user) {
+      if (!user) return false;
+      return ADMIN_UIDS.includes(user.uid);
+    }
+
     function updateAdminUI() {
-      // Show/hide admin-only forms
+      // Show/hide admin-only controls
       for (let i = 0; i < adminOnlyEls.length; i++) {
         adminOnlyEls[i].style.display = currentIsAdmin ? "block" : "none";
       }
 
-      // Show/hide main content based on login
       if (currentUser) {
-        mainEl.style.display = "block";
-        authFormsContainer.style.display = "flex";
-        logoutBtn.style.display = "inline-block";
+        // Hide login overlay, show app shell
+        authOverlay.style.display = "none";
+        appShell.style.display = "block";
 
-        authInfoEl.innerHTML = `Signed in as ${currentUser.email}`;
+        authInfoEl.textContent = `Signed in as ${currentUser.email}`;
         roleBadgeContainer.innerHTML = `
           <span class="badge ${currentIsAdmin ? "admin" : ""}">
             ${currentIsAdmin ? "Admin" : "Viewer"}
           </span>`;
       } else {
-        mainEl.style.display = "none";
-        authInfoEl.textContent = "Not signed in";
-        authFormsContainer.style.display = "flex";
-        logoutBtn.style.display = "none";
-        roleBadgeContainer.innerHTML = `<span class="badge">Viewer</span>`;
+        // Show login overlay, hide app shell
+        authOverlay.style.display = "flex";
+        appShell.style.display = "none";
+
+        // Optional: clear fields
+        // emailInput.value = "";
+        // passwordInput.value = "";
       }
     }
 
-    // 🔴 Same UIDs as in your Firestore rules:
-const ADMIN_UIDS = [
-  "UID_OF_SCOUTMASTER",
-  "UID_OF_SPL",
-  // add more as needed
-];
-
-async function checkAdmin(user) {
-  if (!user) return false;
-  return ADMIN_UIDS.includes(user.uid);
-}
+    // Auth state listener
     onAuthStateChanged(auth, async (user) => {
       currentUser = user;
       currentIsAdmin = await checkAdmin(user);
       updateAdminUI();
     });
 
-    // Auth events
+    // Login
     loginBtn.addEventListener("click", async () => {
       const email = emailInput.value.trim();
       const pass = passwordInput.value.trim();
@@ -637,13 +731,14 @@ async function checkAdmin(user) {
       }
     });
 
+    // Signup
     signupBtn.addEventListener("click", async () => {
       const email = emailInput.value.trim();
       const pass = passwordInput.value.trim();
       if (!email || !pass) return alert("Please enter email and password");
       try {
         await createUserWithEmailAndPassword(auth, email, pass);
-        alert("Account created! Ask the site owner to grant admin if needed.");
+        alert("Account created! You are a viewer by default.");
         emailInput.value = "";
         passwordInput.value = "";
       } catch (e) {
@@ -652,6 +747,7 @@ async function checkAdmin(user) {
       }
     });
 
+    // Logout
     logoutBtn.addEventListener("click", async () => {
       await signOut(auth);
     });
