--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         sans-serif;
       margin: 0;
-      background: radial-gradient(circle at top, #ffffff 0, var(--tan) 55%);
+      background: #d2cab6;
       color: var(--text-main);
       min-height: 100vh;
     }
@@ -149,7 +149,12 @@
     }
 
     header {
-      background: linear-gradient(120deg, var(--blue), var(--red));
+      background: linear-gradient(
+  120deg,
+  #b22222,
+  #ffffff,
+  #1f4e79
+);
       color: var(--white);
       padding: 14px 24px;
       display: flex;
@@ -671,12 +676,9 @@
     let currentUser = null;
     let currentIsAdmin = false;
 
-    // 🛡️ Hard-coded admin UIDs (match your Firestore rules)
-    const ADMIN_UIDS = [
-      "UID_OF_SCOUTMASTER",
-      "UID_OF_SPL"
-      // Add more UIDs here as needed
-    ];
+const ADMIN_UIDS = [
+  "l1TlAvSdW0hpZUPU5eA0XBWD2OA3"
+];
 
     async function checkAdmin(user) {
       if (!user) return false;
