--- a/public/index.html
+++ b/public/index.html
@@ -188,19 +188,15 @@
     }
 
     nav a {
-      color: var(--white);
-      text-decoration: none;
-      padding: 6px 10px;
-      border-radius: var(--radius-sm);
-      border: 1px solid rgba(255, 255, 255, 0.25);
-      backdrop-filter: blur(4px);
-      opacity: 0.9;
-    }
-
-    nav a:hover {
-      opacity: 1;
-      background: rgba(255, 255, 255, 0.12);
-    }
+  color: #1f2933;
+  background: #e6ddc7;
+  border: 1px solid rgba(0,0,0,.15);
+  padding: 6px 10px;
+  border-radius: var(--radius-sm);
+}
+nav a:hover {
+  background: #d8cfb5;
+}
 
     #auth-bar {
       display: flex;
