--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Troop Website</title>
+  <title>Troop 248</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -476,10 +476,10 @@ nav a:hover {
       </div>
 
       <nav>
-        <a href="#calendar">Calendar</a>
-        <a href="#scoutmaster-blog">Scoutmaster</a>
-        <a href="#spl-blog">SPL Blog</a>
-        <a href="#documents">Documents</a>
+        <a href="/calendar">Calendar</a>
+        <a href="/scoutmaster-blog">Scoutmaster</a>
+        <a href="/spl-blog">SPL Blog</a>
+        <a href="/troop-documents">Documents</a>
       </nav>
 
       <div id="auth-bar">
