--- a/public/scoutmaster-blog/index.html
+++ b/public/scoutmaster-blog/index.html
@@ -537,19 +537,20 @@
       deleteDoc
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-    // 🔧 REPLACE WITH YOUR CONFIG
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyD5qUHa2JuQ3iI7U3DrX7JDyhx76PGzhxM",
+  authDomain: "troop-248.firebaseapp.com",
+  projectId: "troop-248",
+  storageBucket: "troop-248.firebasestorage.app",
+  messagingSenderId: "925363875752",
+  appId: "1:925363875752:web:0b001c1a7a09fb8232f79d",
+  measurementId: "G-NY75GX5TBH"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+
 
     const authOverlay = document.getElementById("auth-overlay");
     const appShell = document.getElementById("app-shell");
