--- a/public/index.html
+++ b/public/index.html
@@ -479,7 +479,7 @@ nav a:hover {
         <a href="/calendar">Calendar</a>
         <a href="/scoutmaster-blog">Scoutmaster</a>
         <a href="/spl-blog">SPL Blog</a>
-        <a href="/troop-documents">Documents</a>
+        <a href="/documents">Documents</a>
       </nav>
 
       <div id="auth-bar">
