--- a/public/index.html
+++ b/public/index.html
@@ -477,7 +477,7 @@ nav a:hover {
 
       <nav>
         <a href="/calendar">Calendar</a>
-        <a href="/scoutmaster-blog">Scoutmaster</a>
+        <a href="/scoutmaster">Scoutmaster</a>
         <a href="/spl-blog">SPL Blog</a>
         <a href="/documents">Documents</a>
       </nav>
