--- a/public/index.html
+++ b/public/index.html
@@ -364,6 +364,7 @@
         <a href="/documents">Documents</a>
         <a href="/scoutmaster">Scoutmaster Blog</a>
         <a href="/spl-blog">SPL Blog</a>
+        <a href="/useful-links">Useful Links</a>
       </nav>
 
       <div id="auth-bar">
@@ -394,11 +395,15 @@
         </a>
         <a class="card-link" href="/scoutmaster">
           <h4>Scoutmaster Blog</h4>
-          <p>Messages and updates from the Scoutmaster.</p>
+          <p>Messages and recaps from the Scoutmaster.</p>
         </a>
         <a class="card-link" href="/spl-blog">
           <h4>SPL Blog</h4>
           <p>News and announcements from the Senior Patrol Leader.</p>
+        </a>
+        <a class="card-link" href="/useful-links">
+          <h4>Useful Links</h4>
+          <p>A list of useful links for resources within Scouting.</p>
         </a>
       </div>
     </main>
