--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -473,6 +473,7 @@
         <a href="/documents">Documents</a>
         <a href="/scoutmaster">Scoutmaster Blog</a>
         <a href="/spl-blog">SPL Blog</a>
+        <a href="/useful-links">Useful Links</a>
       </nav>
 
       <div id="auth-bar">
