--- a/public/index.html
+++ b/public/index.html
@@ -355,9 +355,11 @@
   <!-- APP SHELL -->
   <div id="app-shell">
     <header>
-      <div>
-        <h2>Troop 248</h2>
-      </div>
+  <div>
+    <a href="/" class="troop-home-link">
+      <h2>Troop 248</h2>
+    </a>
+  </div>
 
       <nav>
         <a href="/calendar">Calendar</a>
