--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,17 @@
   <title>Troop 248 — Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    .troop-home-link {
+  text-decoration: none;
+  color: inherit;
+  display: inline-flex;
+  align-items: center;
+}
+
+.troop-home-link:hover h2 {
+  opacity: 0.9;
+  text-decoration: underline;
+}
     :root {
       --red: #b22222;
       --blue: #1f4e79;
