--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Troop 248 — Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/bsafavicon.ico" type="image/x-icon">
   <style>
     .troop-home-link {
   text-decoration: none;
